assignment 2 commit contrast fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,9 @@ p{
     text-align: left;
     color: yellow;
 }
-
+blockquote>q{
+    background-color: whitesmoke;
+}
 @media (max-width: 900px){
     body{
         width: 100%;
